2007-05-11  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am, prj2make-sharp-lib.mdp: Updated.

2007-05-09  Lluis Sanchez Gual <lluis@novell.com> 

	* prj2make-sharp-lib.addin.xml, Makefile.am: Flush

2007-05-04  Lluis Sanchez Gual <lluis@novell.com> 

	* prj2make-sharp-lib.addin.xml, Makefile.am: Migration to Mono.Addins.

2007-05-03  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/Combine.cs,
	  MonoDevelop.Projects/CombineEntryEventArgs.cs,
	  MonoDevelop.Projects.Parser/DefaultParserService.cs: Added a
	  Reloading property to the argument of the entry add/remove events
	  of Combine, which is set to true if the entry is being only
	  reloaded, not actually removed/added to the combine.

2007-04-27  Ankit Jain  <jankit@novell.com>

	* MSBuildSolution.cs (UpdateProjectReferences): Remove.

2007-04-27  Ankit Jain  <jankit@novell.com>

	* SlnFileFormat.cs (WriteNestedProjects): Add @root param. Nested
	project info should be emitted wrt @root.

2007-04-26  Ankit Jain  <jankit@novell.com>

	* MSBuildFileFormat.cs (GetExportFiles): Implement.
	* SlnFileFormat.cs (GetExportFiles): Implement.

2007-04-26  Ankit Jain  <jankit@novell.com>

	* MSBuildFileFormat.cs (HandleFilePropertyChanged): ProjectFile.DependsOn can
	be null.

2007-04-26  Ankit Jain  <jankit@novell.com>

	* SlnFileFormat.cs (WriteFile): Allow writing for non-root combines
	which don't have a msbuild combine as parent. Convert any non-msbuild
	child projects to msbuild format, and Save all child entries.
	* MSBuildFileFormat.cs (.ctor): Remove .ctor with @language parameter.
	(WriteFileInternal): Always save updated References.
	(ReferenceToXmlElement): Update if element already exists.
	* MSBuildSolution.cs (.cctor): IdeApp.ProjectOperations could be null
	when invoked from command line.
	(HandleAddEntry): Remove call to UpdateProjectReferences.
	(ConvertToMSBuild): Simplify. Change the fileformat, if required, and
	Save.